--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <script src="js/anime.min.js"></script>
   <script src="js/demo.js"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <div class="elfsight-app-a9e7180a-97f8-44d8-8c5f-e7e0c6706528"></div>
 </body>
 
 <!-- Mirrored from www.marcomarino.design/project.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 02 Jun 2021 10:29:02 GMT -->
