--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <div class="text-block">Mastodon LTD.</div>
         </a>
         <a data-ix="showblock" href="#" class="test-nav-link w-nav-link">Contact US</a>
-        <a href="#" class="test-nav-link w-nav-link">Our Works</a>
-        <a href="about.html" class="test-nav-link w-nav-link">Our Journey</a></nav>
+        <a href="ourworks.html" class="test-nav-link w-nav-link">Our Works</a>
+        <a href="ourjourney.html" class="test-nav-link w-nav-link">Our Journey</a></nav>
     </div>
   </div>
   <div class="contact-block">
@@ -77,7 +77,7 @@
           <div data-ix="close-interaction" class="close-icon"></div>
           <div class="title-contact">Hello! Let&#x27;s get connected.</div><input type="text" class="text-field w-input" maxlength="256" name="First-name" data-name="First name" placeholder="First name" id="First-name" required=""><input type="text" class="text-field w-input" maxlength="256" name="Second-name" data-name="Second name" placeholder="Second name" id="Second-name" required="">
           <input type="email" class="text-field email w-input" maxlength="256" name="Email-adress" data-name="Email adress" placeholder="Email adress" id="Email-adress" required="">
-          <textarea id="Project-description" name="Project-description" placeholder="Project description" maxlength="5000" data-name="Project description" required="" class="text-field message-field w-input"></textarea>
+          <textarea id="Project-description" name="Project-description" placeholder="Order Description" maxlength="5000" data-name="Project description" required="" class="text-field message-field w-input"></textarea>
           <input type="submit" value="Get Connected" data-wait="Please wait..." class="submit-button w-button"><a target="_blank" href="documents/Resume.pdf" class="submit-button secondary">Download Brochure</a></form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
