--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyPortfolio Bootstrap Template - Index</title>
+  <title>Mastodon LTD.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="#" rel="icon">
-  <link href="#" rel="apple-touch-icon">
+  <link href="./assets/img/favicon/favicon-32x32.png" rel="icon">
+  <link href="./assets/img/favicon/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="./assets/vendor/font/font.css" rel="stylesheet">
