--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h3>Mastodon Wash</h3>
                 <span>Ultimate Care</span>
               </div>
-              <img class="img-fluid" src="assets/img/service-bright-1.jpg">
+              <img class="img-fluid" src="assets/img/service-bright-1-min.jpg">
             </a>
           </div>
           <div class="item col col-6 col-sm-3 col-md-3 col-lg-3 mb-3">
@@ -83,16 +83,16 @@
                 <h3>Masta Mart</h3>
                 <span>Place to buy Essentials</span>
               </div>
-              <img class="img-fluid" src="assets/img/service-bright-2.jpg">
+              <img class="img-fluid" src="assets/img/service-bright-2-min.jpg">
             </a>
           </div>
           <div class="item col col-6 col-sm-3 col-md-3 col-lg-3 mb-3">
-            <a href="#l" class="item-wrap fancybox">
+            <a href="#" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>M Garage</h3>
                 <span>Car Doctor</span>
               </div>
-              <img class="img-fluid" src="assets/img/service-bright-3.jpg">
+              <img class="img-fluid" src="assets/img/service-bright-3-min.jpg">
             </a>
           </div>
           <div class="item col col-6 col-sm-3 col-md-3 col-lg-3 mb-3">
@@ -101,7 +101,7 @@
                 <h3>Buy & Sell</h3>
                 <span>Buy anywhere anytime</span>
               </div>
-              <img class="img-fluid" src="assets/img/service-bright-4.jpg">
+              <img class="img-fluid" src="assets/img/service-bright-4-min.jpg">
             </a>
           </div>
           
