--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <script src="assets/js/platform.js" defer></script>
   <div class="elfsight-app-a9e7180a-97f8-44d8-8c5f-e7e0c6706528"></div>
 
   <!-- Template Main JS File -->
