--- a/index.html
+++ b/index.html
@@ -26,10 +26,32 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+ 
+
+   
+ 
+  
+
 
 </head>
 
 <body>
+  <!--======= Pre Loader =======-->
+  <section class="preloader">
+    <div class="preloader__wrapper">
+      <div class="preloader__circle">
+        <div class="preloader__circle-line preloader__circle-line--1"></div>
+        <div class="preloader__circle-line preloader__circle-line--2"></div>
+        <div class="preloader__circle-line preloader__circle-line--3"></div>
+        <div class="preloader__circle-line preloader__circle-line--4"></div>
+        <div class="preloader__circle-line preloader__circle-line--5"></div>
+        <div class="preloader__circle-line preloader__circle-line--6"></div>
+        <div class="preloader__circle-line preloader__circle-line--7"></div>
+        <div class="preloader__circle-line preloader__circle-line--8"></div>
+        <div class="preloader__circle-line preloader__circle-line--9"></div>
+      </div>
+    </div>
+  </section>
 
   <!-- ======= Navbar ======= -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
@@ -39,8 +61,8 @@
           <ul class="custom-menu">
             <ul class="custom-menu">
               <li><a href="index.html">Home</a></li>
-              <li><a href="#">Our Journey</a></li>
-              <li class="active"><a href="#">Contact Us</a></li>
+              <li><a href="ourjourney.html">Our Journey</a></li>
+              <li class="active"><a href="contact.html">Contact Us</a></li>
             </ul>
           </ul>
         </div>
@@ -139,7 +161,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
 
-  <script src="assets/js/platform.js" defer></script>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
   <div class="elfsight-app-a9e7180a-97f8-44d8-8c5f-e7e0c6706528"></div>
 
   <!-- Template Main JS File -->
