--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
   </footer>
 
-  <a href="#" class="btn btn-sm btn-outline-dark back-to-top"><i class="icofont-simple-up"></i></a>
+  <!-- <a href="#" class="btn btn-sm btn-outline-dark back-to-top"><i class="icofont-simple-up"></i></a> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
