--- a/ourjourney.html
+++ b/ourjourney.html
@@ -26,6 +26,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style2.css" rel="stylesheet">
+  <link href="assets/css/styletimeline.css" rel="stylesheet">
 
 </head>
 
@@ -92,12 +93,77 @@
   </div>
 
 
+  
+  
+  <div class="timeline">
+	
+	<h2 class="timeline__item timeline__item--year">2015</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">Mastodon Ltd. started its journey.</h3>
+	</div>
+	
+	<h2 class="timeline__item timeline__item--year">2016</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">Diverted into regular Car Wash Services</h3>
+	</div>
+	
+	<h2 class="timeline__item timeline__item--year">2017</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">top 100 business ideas at Startup Istanbul</h3>
+	</div>
+	
+	<h2 class="timeline__item timeline__item--year">2018</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">top 10 business ideas at Microsoft Young Bangla Summit</h3>
+	</div>
+	
+	<h2 class="timeline__item timeline__item--year">2019</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">Commercially Launched</h3>
+	  
+	</div>
+	
+	<h2 class="timeline__item timeline__item--year">2020</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">Full fledged home car services</h3>
+	  <!-- <p class="timeline__blurb">Started internship at company 2</p> -->
+	</div>
+
+	
+	<h2 class="timeline__item timeline__item--year">2021</h2>
+	
+	<div class="timeline__item">
+	  <h3 class="timeline__title">Served an approximate of 1800+ home car maintenance services and counting</h3>
+	</div>
+		
+  </div>	
+  
+
+
+	
+	
+  </div>
 
 
 
 
 
 
+
+
+
+
+
+
+
+
+  </main>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
