--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 
    
  
-  
-
+  <!--Readmore Ourjourney-->
+  <style>
+    #more {
+      display: none;
+    }
+  </style>
 
 </head>
 
@@ -62,7 +66,7 @@
           <ul class="custom-menu">
             <ul class="custom-menu">
               <li><a href="index.html">Home</a></li>
-              <li><a href="ourjourney.html">Our Journey</a></li>
+              <li><a href="awards.html">Awards</a></li>
               <li class="active"><a href="contact.html">Contact Us</a></li>
             </ul>
           </ul>
@@ -133,11 +137,94 @@
       
 
     </section><!-- End  Works Section -->
+  </div> 
+
+
+
+  <div class="jumbotron text-center" style="justify-content: center; align-items: center; padding: 15px 15px;">
+   
+    <h1 class="display-4">Our Journey!</h1>
+    <hr class="my-5">
+
+   
+
+    <p>On December 2015, Mastodon Ltd. (previously known as Mastodon Wash) started its journey
+      with a waterless home car
+      wash service idea.
+      It would export the products from Italy and serve it to its customers through its
+      trained workforce.
+      Soon after a yearlong period of trial and error with the waterless car wash technique,
+      Mastodon Wash diverted
+      its services into
+
+      <span id="dots">...</span>
+      <span id="more">regular car wash service on 2016 and only
+        focused on recreating the
+        Auto Detailing Industry in Bangladesh.
+        Moving on with our ideas, while acquiring more customers, we have reached a
+        milestone of top 100 business
+        ideas at
+        Startup Istanbul in 2017 and top 10 business ideas at Microsoft Young Bangla Summit
+        in 2018 respectively. By
+        2019,
+        the company has validated both the products and its customers and it was ready to be
+        commercially Launched
+        on 30th August 2019
+        with our first commercial home car wash service at capitals Bashundhara Residential
+        Area.<br><br>
+        August 30th 2019, our journey as a company begins. On our very first year, by the
+        end of Fiscal Year 2020, we
+        have served a little less than 500 orders and have provided full fledged home car
+        services during the
+        Pandemic-COVID-19.
+        In the mean time we have received with the Bangabandhu Innovation Grant of BDT 1
+        Million by the Government of
+        Bangladesh and won multiple native and global recognitions in respective areas of
+        the industry.
+        Slowly but surely, we have survived another year of the scare some pandemic and by
+        the end of FY 2021 we have
+        served an approximate of 1800+ home car maintenance services and counting.
+        <br><br>
+        On 2021, Mastodon Wash became Mastodon Ltd. With the change, the company has since added
+          multiple utilities to
+          its services, such as; car wash, car repair, car buy & sell and a dedicated marketplace
+          for authentic car part
+          and utilities. With a mission of recreating the Auto Detailing Industry in Bangladesh
+          and making car maintenance
+          easier than anything we are operating in the Bangladeshi market since 2015, or 2019
+          commercially.</span>
+    </p>
+
+    <a onclick="myFunction()" class="subheading" id="myBtn">Read more</a>
+    
+    <script>
+      function myFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+      }
+    </script>
+
+  
   </div>
+
+
+
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer class="footer" role="contentinfo" id="footerrow">
+  <footer class="footer navbar-fixed-bottom" role="contentinfo" id="footerrow">
     <div class="container col col-12 col-sm-12 col-md-12 col-lg-12 mb-12">
       <div class="row">
         <div class="col-sm-12 text-center ">
