--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style2.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 <body>
@@ -54,7 +54,7 @@
             <ul class="custom-menu">
                 <ul class="custom-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="ourjourney.html">Our Journey</a></li>
+                <li><a href="awards.html">Awards</a></li>
                 <li class="active"><a href="contact.html">Contact Us</a></li>
                 </ul>
             </ul>
