--- a/index.html
+++ b/index.html
@@ -141,14 +141,13 @@
 
 
 
-  <div class="jumbotron text-center" style="justify-content: center; align-items: center; padding: 15px 15px;">
-   
+  <div class="jumbotron text-center">
     <h1 class="display-4">Our Journey!</h1>
     <hr class="my-5">
 
    
 
-    <p>On December 2015, Mastodon Ltd. (previously known as Mastodon Wash) started its journey
+    <p class="font-weight-light" style="font-size: 16px;">On December 2015, Mastodon Ltd. (previously known as Mastodon Wash) started its journey
       with a waterless home car
       wash service idea.
       It would export the products from Italy and serve it to its customers through its
@@ -224,7 +223,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer class="footer navbar-fixed-bottom" role="contentinfo" id="footerrow">
+  <footer class="footer navbar-fixed-bottom" role="contentinfo">
     <div class="container col col-12 col-sm-12 col-md-12 col-lg-12 mb-12">
       <div class="row">
         <div class="col-sm-12 text-center ">
