--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
    
 
-    <p class="font-weight-light" style="font-size: 16px;">On December 2015, Mastodon Ltd. (previously known as Mastodon Wash) started its journey
+    <p class="font-weight-light" style="font-size: 16px; text-align: justify;">On December 2015, Mastodon Ltd. (previously known as Mastodon Wash) started its journey
       with a waterless home car
       wash service idea.
       It would export the products from Italy and serve it to its customers through its
@@ -217,7 +217,34 @@
   
   </div>
 
-
+  <div class="jumbotron jumbotron-fluid" style="padding: 5rem 5rem;">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" style="border-radius: 35px;" src="./assets/img/work1.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item" style="border-radius: 35px;">
+        <img class="d-block w-100" style="border-radius: 35px;" src="./assets/img/work2.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item" style="border-radius: 35px;">
+        <img class="d-block w-100" style="border-radius: 35px;" src="./assets/img/work3.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div> 
+</div>
 
 
   </main><!-- End #main -->
