--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
   
   </div>
 
-  <div class="jumbotron jumbotron-fluid" style="padding: 5rem 5rem;">
+  <div class="jumbotron jumbotron-fluid" style="padding: 1px 1px;">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -224,13 +224,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" style="border-radius: 35px;" src="./assets/img/work1.jpg" alt="First slide">
+        <img class="d-block w-100" src="./assets/img/work1.jpg" alt="First slide">
       </div>
-      <div class="carousel-item" style="border-radius: 35px;">
-        <img class="d-block w-100" style="border-radius: 35px;" src="./assets/img/work2.jpg" alt="Second slide">
+      <div class="carousel-item" >
+        <img class="d-block w-100"  src="./assets/img/work2.jpg" alt="Second slide">
       </div>
-      <div class="carousel-item" style="border-radius: 35px;">
-        <img class="d-block w-100" style="border-radius: 35px;" src="./assets/img/work3.jpg" alt="Third slide">
+      <div class="carousel-item" >
+        <img class="d-block w-100"  src="./assets/img/work3.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
