--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <ul class="custom-menu">
                 <ul class="custom-menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="awards.html">Awards</a></li>
+                <li><a href="awards.html">Our Journey</a></li>
                 <li class="active"><a href="contact.html">Contact Us</a></li>
                 </ul>
             </ul>
@@ -82,9 +82,9 @@
               <div class="row mb-5 align-items-end">
                 <div class="col-md-6" data-aos="fade-up">
                   <h2>Contact Us</h2>
-                  <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
+                  <!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut
                     officiis explicabo inventore.
-                  </p>
+                  </p> -->
                 </div>
       
               </div>
