--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <ul class="custom-menu">
             <ul class="custom-menu">
               <li><a href="index.html">Home</a></li>
-              <li><a href="awards.html">Awards</a></li>
+              <li><a href="awards.html">Our Journey</a></li>
               <li class="active"><a href="contact.html">Contact Us</a></li>
             </ul>
           </ul>
@@ -87,7 +87,17 @@
     </div>
   </nav>
 
+
+
   <main id="main">
+
+  <!--=====ABOUT=====-->  
+  <div class="jumbotron text-center" style="padding: 0px; text-align: justify;">
+    <h1 class="display-4">About</h1>
+        <p class="card-text">Mastodon Ltd. is a Vehicle Maintenance company with its 360-service platform providing car wash, Scanning & repair, dedicated marketplace for cars, and car part & accessories. </p>
+      </div>
+    </div>
+
 
     <!-- ======= Works Section ======= -->
 
@@ -139,110 +149,23 @@
     </section><!-- End  Works Section -->
   </div> 
 
-
-
-  <div class="jumbotron text-center">
-    <h1 class="display-4">Our Journey!</h1>
-    <hr class="my-5">
-
-   
-
-    <p class="font-weight-light" style="font-size: 16px; text-align: justify;">On December 2015, Mastodon Ltd. (previously known as Mastodon Wash) started its journey
-      with a waterless home car
-      wash service idea.
-      It would export the products from Italy and serve it to its customers through its
-      trained workforce.
-      Soon after a yearlong period of trial and error with the waterless car wash technique,
-      Mastodon Wash diverted
-      its services into
-
-      <span id="dots">...</span>
-      <span id="more">regular car wash service on 2016 and only
-        focused on recreating the
-        Auto Detailing Industry in Bangladesh.
-        Moving on with our ideas, while acquiring more customers, we have reached a
-        milestone of top 100 business
-        ideas at
-        Startup Istanbul in 2017 and top 10 business ideas at Microsoft Young Bangla Summit
-        in 2018 respectively. By
-        2019,
-        the company has validated both the products and its customers and it was ready to be
-        commercially Launched
-        on 30th August 2019
-        with our first commercial home car wash service at capitals Bashundhara Residential
-        Area.<br><br>
-        August 30th 2019, our journey as a company begins. On our very first year, by the
-        end of Fiscal Year 2020, we
-        have served a little less than 500 orders and have provided full fledged home car
-        services during the
-        Pandemic-COVID-19.
-        In the mean time we have received with the Bangabandhu Innovation Grant of BDT 1
-        Million by the Government of
-        Bangladesh and won multiple native and global recognitions in respective areas of
-        the industry.
-        Slowly but surely, we have survived another year of the scare some pandemic and by
-        the end of FY 2021 we have
-        served an approximate of 1800+ home car maintenance services and counting.
-        <br><br>
-        On 2021, Mastodon Wash became Mastodon Ltd. With the change, the company has since added
-          multiple utilities to
-          its services, such as; car wash, car repair, car buy & sell and a dedicated marketplace
-          for authentic car part
-          and utilities. With a mission of recreating the Auto Detailing Industry in Bangladesh
-          and making car maintenance
-          easier than anything we are operating in the Bangladeshi market since 2015, or 2019
-          commercially.</span>
-      <a onclick="myFunction()" class="subheading" id="myBtn">Read more</a>
-    </p>
-    <script>
-      function myFunction() {
-        var dots = document.getElementById("dots");
-        var moreText = document.getElementById("more");
-        var btnText = document.getElementById("myBtn");
-
-        if (dots.style.display === "none") {
-          dots.style.display = "inline";
-          btnText.innerHTML = "Read more";
-          moreText.style.display = "none";
-        } else {
-          dots.style.display = "none";
-          btnText.innerHTML = "Read less";
-          moreText.style.display = "inline";
-        }
-      }
-    </script>
-
-  
-  </div>
-
-  <div class="jumbotron jumbotron-fluid" style="padding: 0px 0px;">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="./assets/img/work1.jpg" alt="First slide">
-      </div>
-      <div class="carousel-item" >
-        <img class="d-block w-100"  src="./assets/img/work2.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item" >
-        <img class="d-block w-100"  src="./assets/img/work3.jpg" alt="Third slide">
+  <!--=====Mission=====-->  
+  <div class="jumbotron text-center" style="padding: 0px; text-align: justify;">
+    <h1 class="display-4">Mission</h1>
+        <hr class="my-4">
+        <p class="card-text" style="font-size: 18px;">Recreating the Auto Detailing Industry in Bangladesh. </p>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> 
-</div>
+    <hr class="my-4">
+  <!--=====Mission=====-->  
+  <div class="jumbotron text-center" style="padding: 0px; text-align: justify;">
+    <h1 class="display-4">Vision</h1>
+        <hr class="my-4">
+        <p class="card-text" style="font-size: 18px;">Automate vehicle maintenance using tech and intelligence; cutting down the service hours. </p>
+      </div>
+    </div>  
+    <hr class="my-4">
+
 
 
   </main><!-- End #main -->
@@ -255,6 +178,7 @@
           <div class="col-sm-12 social" style="padding: 2px;">
             <a href="#"><span class="icofont-instagram"></span></a>
             <a href="#"><span class="icofont-facebook"></span></a>
+            <a href="#"><span class="icofont-linkedin"></span></a>
           </div>
           <h6 class="font-weight-light" style="font-size: 14px;">&copy; Copyright Mastodon LTD.. All Rights Reserved</h6>
           
