forth iteration with about page

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
         <div class="col-6 col-md-2">
           <ul>
             <h5 class="card-title font-weight-bolder" style="color: azure;">About</h5>
-            <li><a href="#">Our Journey</a></li>
-            <li><a href="#">Mission</a></li>
-            <li><a href="#">Vision</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Board of Directors</a></li>
+            <li><a href="about.html">Our Journey</a></li>
+            <li><a href="about.html">Mission</a></li>
+            <li><a href="about.html">Vision</a></li>
+            <li><a href="about.html">Team</a></li>
+            <li><a href="about.html">Board of Directors</a></li>
             
           </ul>
         </div>
@@ -212,22 +212,7 @@
     </section><!-- End  Works Section -->
   </div> 
 
-  <!-- --=====Mission=====-- 
-  <div class="jumbotron text-center" style="padding: 0px; text-align: justify;">
-    <h1 class="display-4">Mission</h1>
-        <hr class="my-4">
-        <p class="card-text" style="font-size: 18px;">Recreating the Auto Detailing Industry in Bangladesh. </p>
-      </div>
-    </div>
-    <hr class="my-4">
-  --=====Mission=====--  
-  <div class="jumbotron text-center" style="padding: 0px; text-align: justify;">
-    <h1 class="display-4">Vision</h1>
-        <hr class="my-4">
-        <p class="card-text" style="font-size: 18px;">Automate vehicle maintenance using tech and intelligence; cutting down the service hours. </p>
-      </div>
-    </div>  
-    <hr class="my-4"> -->
+
 
 
 
