--- a/about.html
+++ b/about.html
@@ -238,6 +238,19 @@
       </div>
       <br>
 
+      <p class="font-weight-light" style="font-size: 18px; text-align: justify;">By 2019, the company has validated both the products and its customers and
+        it was ready to be commercially Launched on 30th August 2019 with our first
+        commercial home car wash service at capitals Bashundhara Residential
+        Area. August 30th 2019, our journey as a company begins.
+        </p>
+      <div class="jumbotron-fluid" style="width: auto; padding-right: 0px; padding-left: 0px;">
+        <img class="img-fluid mx-auto col-5 col-lg-5 col-md-5 col-sm-5" style="padding-bottom: 10px; position: relative; width: 100%; padding-right: 5px; padding-left: 0px;" src="./assets/img/aboutpage/5.png" alt="Card image cap">
+        <img class="img-fluid mx-auto col-5 col-lg-5 col-md-5 col-sm-5" style="padding-bottom: 10px; position: relative; width: 100%; padding-right: 0px; padding-left: 5px;" src="./assets/img/aboutpage/5a.JPG" alt="Card image cap">
+        <img class="img-fluid mx-auto col-5 col-lg-5 col-md-5 col-sm-5" style="position: relative; width: 100%; padding-right: 5px; padding-left: 0px;" src="./assets/img/aboutpage/5b.jpg" alt="Card image cap">
+        <img class="img-fluid mx-auto col-3 col-lg-3 col-md-3 col-sm-3" style="position: relative; width: 100%; padding-right: 0px; padding-left: 5px;" src="./assets/img/aboutpage/5c.jpg" alt="Card image cap">
+      </div>
+      <br>
+
       <p class="font-weight-light" style="font-size: 18px; text-align: justify;">On our very first year, by the end of Fiscal Year 2020, we have served a little
         less than 500 orders and have provided full-fledged home car services during
         the Pandemic-COVID-19. In the mean time we have received with the
