--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
         <div class="col-6 col-md-2">
             <ul>
               <h5 class="card-title font-weight-bolder" style="color: azure;">Home</h5>
-              <li><a href="#">Mastodon Wash</a></li>
+              <li><a href="wash1.html">Mastodon Wash</a></li>
               <li><a href="#">Mastodon Garage</a></li>
               <li><a href="#">Masta Mart</a></li>
               <li><a href="#">Buy & Sell</a></li>
