--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
     <nav class="navbar navbar-light">
       <div class="container">
         
-        <a class="navbar-brand"  href="index.html"> <img id="logo"  src="./assets/img/logo.png" alt="">Mastodon LTD.</a>
+        <a class="navbar-brand"  href="index.html"> <img id="logo"  src="./assets/img/logo.png" alt="">Mastodon</a>
 
         <a href="#" class="burger" data-toggle="collapse" data-target="#main-navbar">
           <span></span>
