--- a/mastodonwashapp.html
+++ b/mastodonwashapp.html
@@ -209,7 +209,6 @@
             html,
             body {
             margin: 0%;
-            
             overflow-y: hidden;
             overflow-x: hidden;
             }
@@ -489,7 +488,7 @@
             .bg {
             /* animation:slide 3s ease-in-out infinite alternate;
             background-image: linear-gradient(-60deg, rgb(207, 230, 196) 50%, rgba(255, 255, 255, 0.418) 50%);*/
-            background: #ebebeb;
+            background: #d6d6d6;
             bottom:0; 
             left:-50%;
             opacity:.5;
