seventh iteration final

--- a/mastodonwashapp.html
+++ b/mastodonwashapp.html
@@ -635,7 +635,7 @@
         <!--=======Hero Image======-->
         <div class="card bg-dark text-white">
             <img class="card-img" style="width: auto; height: 35vh; margin-top: -25px;" src="./assets/img/appimage/wash/hero.jpg" alt="Card image">
-            <div class="card-img-overlay text-center" style="margin-top: 55px;">
+            <div class="card-img-overlay text-center" style="margin-top: 10vh;">
               <h5 class="card-title" style="font-size: 30px;">Mastodon Wash</h5>
               <p class="card-text" style="font-size: 18px;">World class paint correction & detailing at your door</p>
             </div>
