--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         <div class="col-6 col-md-2">
             <ul>
               <h5 class="card-title font-weight-bolder" style="color: azure;">Home</h5>
-              <li><a href="wash1.html">Mastodon Wash</a></li>
-              <li><a href="mastodonwashapp.html">Mastodon Wash App Demo</a></li>              <li><a href="#">Mastodon Garage</a></li>
+              <li><a href="#">Mastodon Wash</a></li>
               <li><a href="#">Masta Mart</a></li>
-              <li><a href="#">Buy & Sell</a></li>
+              <li><a href="#">Buy a Car</a></li>
+              <li><a href="#">Sell a Car</a></li>
               <li><a href="#">Masta Tech</a></li>
             </ul>
         </div>
