--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700&display=swap" rel="stylesheet">
 
-  <link rel='stylesheet' id='font-awesome-css'  href='assets/css/font-awesome.min8a54.css' media='all' />
-  <link rel='stylesheet' id='home-css'  href='assets/css/customNav.css' media='all' />
+ 
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +28,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
- 
+  <link rel='stylesheet' id='home-css'  href='assets/css/customNav.css' media='all' />
 
    
  
@@ -37,6 +36,10 @@
   <style>
     #more {
       display: none;
+    }
+    body {
+      overflow-y: scroll;
+      overflow-x: hidden;
     }
   </style>
 
@@ -153,7 +156,7 @@
 
   <!--Desktop Navbar-->
   <section class="MenuBar white">
-    <div class="container-fluid" style="width: 100%; padding-right: 160px; padding-left: 160px; margin-right: auto; margin-left: auto;">
+    <div class="container-fluid" style="width: 100%; padding-right: 100px; padding-left: 100px; margin-right: auto; margin-left: auto;">
         <div class="row">
             <div class="col-md-12 MenuBar-wrap">
 
@@ -177,7 +180,7 @@
 
 <!--menu items-->
 <section class="MenuItems">
-    <div class="container-fluid" style="width: 100%; padding-right: 140px; padding-left: 200px; margin-right: auto; margin-left: auto;">
+    <div class="container-fluid" style="width: 100%; padding-right: 100px; padding-left: 100px; margin-right: auto; margin-left: auto;">
         <img class="modify-img"
              data-image-small="assets/img/navimg/wash.jpg"
              data-image-large="assets/img/navimg/wash.jpg"
@@ -204,11 +207,11 @@
                 <!--   menu item box-->
                 <div class="MenuItems__items">
                     <h4>About</h4>
-                    <div class="menu-portfolio-container"><ul id="portfolio-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-305"><a href="#">Our Journey</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Mission</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Vision</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Team</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Board of Directors</a></li>
+                    <div class="menu-portfolio-container"><ul id="portfolio-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-305"><a href="about.html">Our Journey</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Mission</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Vision</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Team</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Board of Directors</a></li>
 
 </ul></div>                </div>
 
@@ -264,7 +267,7 @@
 
 
     <div class="Startup_Banner__slider__notes">
-        <div class="container-fluid" style="width: 100%; padding-right: 200px; padding-left: 200px; margin-right: auto; margin-left: auto;">
+        <div class="container-fluid" style="width: 100%; padding-right: 200px; padding-left: 100px; margin-right: auto; margin-left: auto;">
             <div class="row">
                 <div class="col-md-12 Startup_Banner__slider__notes-wrap">
                     <div class="Startup_Banner__slider__notes__icon">
@@ -367,11 +370,11 @@
                           <a class="main-sub-clicked" href="javascript:">About</a>
                           <!--  sub menu 2nd step   -->
                           <ul class="mobile-inner-sub">
-                              <div class="menu-portfolio-container"><ul id="portfolio-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-305"><a href="#">Our Journey</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Mission</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Vision</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Team</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Board of Directors</a></li>
+                              <div class="menu-portfolio-container"><ul id="portfolio-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-305"><a href="about.html">Our Journey</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Mission</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Vision</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Team</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Board of Directors</a></li>
 </ul></div>                            </ul>
                       </li>
 
@@ -434,10 +437,10 @@
       <!-- client icons-->
       <div class="Startup_Banner__slider__notes__icon">
           <ul>
-              <li><a target="_blank" href="https://ictd.gov.bd/"><img
+              <li><a target="_blank" href="#"><img
                               src="assets/img/navimg/home/sub-logo1.svg"
                               alt="image missing"></a></li>
-              <li><a target="_blank" href="https://digitalbangladesh.gov.bd/"><img
+              <li><a target="_blank" href="#"><img
                               src="assets/img/navimg/home/sub-logo2.svg"
                               alt="image missing"></a></li>
           </ul>
@@ -562,7 +565,7 @@
   <!-- ======= Footer ======= -->
   
 
-    <footer class="footer" style="position: absolute;
+  <footer class="footer" style="position: absolute;
     bottom: 0;
     width: 100%;
     height: 40px; /* Set the fixed height of the footer here */
