--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mastodon LTD | About Us</title>
+  <title>Mastodon | About Us</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -228,7 +228,7 @@
 
 
   <!--Desktop Navbar-->
-  <section class="MenuBar white">
+  <section class="MenuBar white" style="-webkit-backdrop-filter: blur(8px); backdrop-filter: blur(8px);">
     <div class="container-fluid" style="width: 100%; padding-right: 100px; padding-left: 100px; margin-right: auto; margin-left: auto;">
         <div class="row">
             <div class="col-md-12 MenuBar-wrap">
@@ -342,16 +342,27 @@
     <div class="Startup_Banner__slider__notes">
         <div class="container-fluid" style="width: 100%; padding-right: 200px; padding-left: 100px; margin-right: auto; margin-left: auto;">
             <div class="row">
+              
                 <div class="col-md-12 Startup_Banner__slider__notes-wrap">
                     <div class="Startup_Banner__slider__notes__icon">
-                        <ul>
-                            <li><a target="_blank" href="#">
-                                    <img src="assets/img/navimg/home/sub_logo1.png"
-                                         alt="image missing"></a></li>
-                            <li><a target="_blank" href="#">
-                                    <img src="assets/img/navimg/home/sub_logo2.png"
-                                         alt="image missing"></a></li>
-                        </ul>
+                      
+                      <ul  style="margin-top: -15px; margin-bottom: 0ex;">
+                        <li><a target="_blank" href="#">
+                                <img src="assets/img/navimg/home/sub_logo1.png"
+                                     alt="image missing"></a></li>
+                        <li><a target="_blank" href="#">
+                                <img src="assets/img/navimg/home/sub_logo2.png"
+                                     alt="image missing"></a></li>
+                    </ul>
+                    <br style="padding: 0;">
+                    <ul style="margin-top: 0px; margin-bottom: 0ex;">
+                        <li><a target="_blank" href="#" style="height: auto; width:113px">
+                          <img src="assets/img/navimg/home/sub-logo1.svg"
+                               alt="image missing"></a></li>
+                        <li><a target="_blank" href="#" style="height: auto; width:134px">
+                                <img src="assets/img/navimg/home/sub-logo2.svg"
+                                    alt="image missing"></a></li>
+                    </ul>
                     </div>
 
                     <div class="Startup_Banner__slider__notes__social">
@@ -509,14 +520,23 @@
 
       <!-- client icons-->
       <div class="Startup_Banner__slider__notes__icon">
-          <ul>
-              <li><a target="_blank" href="#"><img
-                              src="assets/img/navimg/home/sub_logo1.png"
-                              alt="image missing"></a></li>
-              <li><a target="_blank" href="#"><img
-                              src="assets/img/navimg/home/sub_logo2.png"
-                              alt="image missing"></a></li>
-          </ul>
+        <ul>
+          <li><a target="_blank" href="#">
+                  <img src="assets/img/navimg/home/sub_logo1.png"
+                       alt="image missing"></a></li>
+          <li><a target="_blank" href="#">
+                  <img src="assets/img/navimg/home/sub_logo2.png"
+                       alt="image missing"></a></li>
+      </ul>
+      <br style="padding: 0;">
+      <ul>
+          <li><a target="_blank" href="#" style="height: auto; width:112px">
+            <img src="assets/img/navimg/home/sub-logo1.svg"
+                 alt="image missing"></a></li>
+          <li><a target="_blank" href="#" style="height: auto; width:134px">
+                  <img src="assets/img/navimg/home/sub-logo2.svg"
+                      alt="image missing"></a></li>
+      </ul>
       </div>
 
   </div>
@@ -540,7 +560,7 @@
 
 
 <!--=====Our Journey=====-->
-  <div class="jumbotron text-center" style="padding-top: 50px;">
+  <div class="jumbotron text-center" style="padding-top: 110px;">
     <h1 class="display-4">Our Journey!</h1>
     <hr class="my-2">
 
