--- a/about.html
+++ b/about.html
@@ -345,17 +345,14 @@
               
                 <div class="col-md-12 Startup_Banner__slider__notes-wrap">
                     <div class="Startup_Banner__slider__notes__icon">
-                      
-                      <ul  style="margin-top: -15px; margin-bottom: 0ex;">
+                    <h4  style="font-size: 16px; color: azure;">Portfolio Startup</h4>  
+                    <ul style="margin: 0ex;">
                         <li><a target="_blank" href="#">
                                 <img src="assets/img/navimg/home/sub_logo1.png"
                                      alt="image missing"></a></li>
                         <li><a target="_blank" href="#">
                                 <img src="assets/img/navimg/home/sub_logo2.png"
                                      alt="image missing"></a></li>
-                    </ul>
-                    <br style="padding: 0;">
-                    <ul style="margin-top: 0px; margin-bottom: 0ex;">
                         <li><a target="_blank" href="#" style="height: auto; width:113px">
                           <img src="assets/img/navimg/home/sub-logo1.svg"
                                alt="image missing"></a></li>
