--- a/index.html
+++ b/index.html
@@ -280,13 +280,10 @@
                             <li><a target="_blank" href="#">
                                     <img src="assets/img/navimg/home/sub_logo2.png"
                                          alt="image missing"></a></li>
-                        </ul>
-                        <br style="padding: 0;">
-                        <ul>
-                            <li><a target="_blank" href="#" style="height: auto; width:113px">
+                            <li><a target="_blank" href="#">
                               <img src="assets/img/navimg/home/sub-logo1.svg"
                                    alt="image missing"></a></li>
-                            <li><a target="_blank" href="#" style="height: auto; width:134px">
+                            <li><a target="_blank" href="#">
                                     <img src="assets/img/navimg/home/sub-logo2.svg"
                                         alt="image missing"></a></li>
                         </ul>
