--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <div class="col-md-12 Startup_Banner__slider__notes-wrap">
                   
                     <div class="Startup_Banner__slider__notes__icon">
-                      <h4  style="font-size: 16px; color: azure;">Portfolio Startup</h4>
+                      <h4 class="font-weight-light" style="font-size: 16px; color: azure;">Portfolio Startup of</h4>
                         <ul>
                             <li><a target="_blank" href="#">
                                     <img src="assets/img/navimg/home/sub_logo1.png"
