--- a/about.html
+++ b/about.html
@@ -345,7 +345,7 @@
               
                 <div class="col-md-12 Startup_Banner__slider__notes-wrap">
                     <div class="Startup_Banner__slider__notes__icon">
-                    <h4  style="font-size: 16px; color: azure;">Portfolio Startup</h4>  
+                    <h4 class="font-weight-lighter" style="font-size: 14px; color: rgba(240, 255, 255, 0.829);">Portfolio Startup of</h4>  
                     <ul style="margin: 0ex;">
                         <li><a target="_blank" href="#">
                                 <img src="assets/img/navimg/home/sub_logo1.png"
