--- a/index.html
+++ b/index.html
@@ -272,8 +272,7 @@
                 <div class="col-md-12 Startup_Banner__slider__notes-wrap">
                   
                     <div class="Startup_Banner__slider__notes__icon">
-                      <h4 class="font-weight-light" style="font-size: 16px; color: azure;">Portfolio Startup of</h4>
-                        <ul>
+                      <h4 class="font-weight-lighter" style="font-size: 14px; color: rgba(240, 255, 255, 0.829);">Portfolio Startup of</h4>                        <ul>
                             <li><a target="_blank" href="#">
                                     <img src="assets/img/navimg/home/sub_logo1.png"
                                          alt="image missing"></a></li>
