--- a/index.html
+++ b/index.html
@@ -208,10 +208,9 @@
                 <div class="MenuItems__items">
                     <h4>About</h4>
                     <div class="menu-portfolio-container"><ul id="portfolio-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-305"><a href="about.html">Our Journey</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Mission</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Vision</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Team</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Board of Directors</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="mission.html">Mission</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="mission.html">Vision</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="personnel.html">Personnel</a></li>
 
 </ul></div>                </div>
 
@@ -295,13 +294,13 @@
                         </div>
 
                         <ul>
-                            <li><a target="_blank" href="#"><i
-                                            class="icofont-facebook" aria-hidden="true"></i></a></li>
-                            <li><a target="_blank" href="#"><i
-                                            class="icofont-linkedin" aria-hidden="true"></i></a></li>
-                            <li><a target="_blank" href="#"><i
-                                            class="icofont-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
+                          <li><a target="_blank" href="https://www.facebook.com/mastodonwash"><i
+                                          class="icofont-facebook" aria-hidden="true"></i></a></li>
+                          <li><a target="_blank" href="https://www.linkedin.com/company/mastashed/"><i
+                                          class="icofont-linkedin" aria-hidden="true"></i></a></li>
+                          <li><a target="_blank" href="https://www.instagram.com/mastodonwash/"><i
+                                          class="icofont-instagram" aria-hidden="true"></i></a></li>
+                      </ul>
                     </div>
                 </div>
 
@@ -378,10 +377,9 @@
                           <!--  sub menu 2nd step   -->
                           <ul class="mobile-inner-sub">
                               <div class="menu-portfolio-container"><ul id="portfolio-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-305"><a href="about.html">Our Journey</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Mission</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Vision</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Team</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="about.html">Board of Directors</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="mission.html">Mission</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="mission.html">Vision</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="personnel.html">Personnel</a></li>
 </ul></div>                            </ul>
                       </li>
 
@@ -556,7 +554,7 @@
           <div class="item col col-6 col-sm-3 col-md-3 col-lg-3 mb-3">
             <a href="#" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Masta Tech</h3>
+                <h3>Masta Tech</h3> 
                 <br>
                 <span><p style="font-size: 14px; color: azure; ">	
                   &#2096; Coming Soon</p></span>
@@ -586,9 +584,9 @@
       <div class="row">
         <div class="col-sm-12 text-center ">
           <div class="col-sm-12 social" style="padding: 2px;">
-            <a href="#"><span class="icofont-instagram"></span></a>
-            <a href="#"><span class="icofont-facebook"></span></a>
-            <a href="#"><span class="icofont-linkedin"></span></a>
+            <a href="https://www.instagram.com/mastodonwash/"><span class="icofont-instagram"></span></a>
+            <a href="https://www.facebook.com/mastodonwash"><span class="icofont-facebook"></span></a>
+            <a href="https://www.linkedin.com/company/mastashed/"><span class="icofont-linkedin"></span></a>
           </div>
           <h6 class="font-weight-light" style="font-size: 14px;">&copy; Copyright Mastodon. All Rights Reserved</h6>
           
