--- a/personnel.html
+++ b/personnel.html
@@ -203,9 +203,9 @@
                 <!--   menu item box-->
                 <div class="MenuItems__items">
                     <h4>Blog</h4>
-                    <div class="menu-partners-container"><ul id="partner-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-350"><a href="#">DIY</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Detail Studio</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="#">Detail Hack</a></li>
+                    <div class="menu-partners-container"><ul id="partner-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-350"><a href="diy.html">DIY</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="detailstudio.html">Detail Studio</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1351"><a href="detailhack.html">Detail Hack</a></li>
                     
                   </ul>
                   </div>                
@@ -215,10 +215,10 @@
                 <!--   menu item box-->
                 <div class="MenuItems__items">
                     <h4>Media</h4>
-                    <div class="menu-media-container"><ul id="media-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-351"><a href="#">Newsroom</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-352"><a href="#">Gallery</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-354"><a href="#">Studio</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-353"><a href="#">Resources</a></li>
+                    <div class="menu-media-container"><ul id="media-menu" class="menu"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-351"><a href="newsroom.html">Newsroom</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-352"><a href="gallery.html">Gallery</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-354"><a href="studio.html">Studio</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-353"><a href="resources.html">Resources</a></li>
                 </ul>
               </div>                
             </div>
@@ -226,8 +226,8 @@
                 <!--   menu item box-->
                 <div class="MenuItems__items">
                     <h4>career</h4>
-                    <div class="menu-career-container"><ul id="career-menu" class="menu"><li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="#">Job Openning</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1499"><a href="#">Life @ Mastodon</a></li>
+                    <div class="menu-career-container"><ul id="career-menu" class="menu"><li id="menu-item-355" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-355"><a href="jobopening.html">Job Openning</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1499"><a href="lifeatmastodon.html">Life @ Mastodon</a></li>
                     </ul>
                   </div>                
                 </div>
@@ -235,9 +235,9 @@
                 <!--   menu item box-->
                 <div class="MenuItems__items">
                     <h4>contact</h4>
-                    <div class="menu-contact-container"><ul id="contact-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-357"><a href="contact.html">Information</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-358"><a href="#">Enquiries</a></li>
-                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1503"><a href="#">FAQ</a></li>
+                    <div class="menu-contact-container"><ul id="contact-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-357"><a href="info.html">Information</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-358"><a href="enquiries.html">Enquiries</a></li>
+                    <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1503"><a href="faq.html">FAQ</a></li>
                     </ul>
                   </div>                
                 </div>
