--- a/studio.html
+++ b/studio.html
@@ -384,7 +384,7 @@
                               <div class="menu-media-container"><ul id="media-menu" class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-351"><a href="newsroom.html">Newsroom</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-352"><a href="gallery.html">Gallery</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-354"><a href="studio.html">Studio</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1513"><a href="resource.html">Resources</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1513"><a href="resources.html">Resources</a></li>
 
 </ul></div>                            </ul>
                       </li>
